# LearnDesignPatterns

./: .gitignore  404.html  CMakeLists.txt  README.md  content.md  index.html  search-index.json  sitemap.xml
.claude/: settings.local.json
01_ComponentCollaboration/: CMakeLists.txt
01_ComponentCollaboration/Observer/: CMakeLists.txt  Observer.cpp  Observer.h  Observer.md
01_ComponentCollaboration/Strategy/: CMakeLists.txt  Strategy.cpp  Strategy.h  Strategy.md
01_ComponentCollaboration/TemplateMethod/: CMakeLists.txt  TemplateMethod.cpp  TemplateMethod.h  TemplateMethod.md
02_SingleResponsibility/: CMakeLists.txt
02_SingleResponsibility/Bridge/: Bridge.cpp  Bridge.h  Bridge.md  CMakeLists.txt
02_SingleResponsibility/Decorator/: CMakeLists.txt  Decorator.cpp  Decorator.h  Decorator.md
03_ObjectCreation/: CMakeLists.txt
03_ObjectCreation/AbstractFactory/: AbstractFactory.cpp  AbstractFactory.h  AbstractFactory.md  CMakeLists.txt
03_ObjectCreation/Builder/: Builder.cpp  Builder.h  Builder.md  CMakeLists.txt
03_ObjectCreation/FactoryMethod/: CMakeLists.txt  FactoryMethod.cpp  FactoryMethod.h  FactoryMethod.md
03_ObjectCreation/Prototype/: CMakeLists.txt  Prototype.cpp  Prototype.h  Prototype.md
04_ObjectPerformance/: CMakeLists.txt
04_ObjectPerformance/Flyweight/: CMakeLists.txt  Flyweight.cpp  (+2 more)
05_InterfaceIsolation/: CMakeLists.txt
06_StateChange/: CMakeLists.txt
07_DataStructure/: CMakeLists.txt
08_BehavioralChange/: CMakeLists.txt
search/: index.html
website/: deploy.ps1  docusaurus.config.ts  package-lock.json  package.json
(+379 files in other folders)
